--- a/views/index.html
+++ b/views/index.html
@@ -1,212 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/component.css" />
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
     <title>ĐỒ ÁN TỐT NGHIỆP</title>
-    <link rel="stylesheet" href="loi.css" />
-    <link rel="stylesheet" href="style2.css">
-</head>
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow"
+    >
+      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">HCMUTE</a>
+      <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="#">Sign out</a>
+        </li>
+      </ul>
+    </nav>
 
-<body>
-    <h1>ĐỒ ÁN TỐT NGHIỆP</h1>
-    <h2>ĐỀ TÀI: "THIẾT KẾ HỆ THỐNG GIÁM SÁT NÔNG NGHIỆP DÙNG CÔNG NGHỆ IOT</h2>
-    <h2>THÔNG QUA MẠNG ZIGBEE"</h2>
-    <p>
-        CHẾ ĐỘ HOẠT ĐỘNG
-    </p>
-    <div>
-        <div class="anh">
-            <img width="90" src="hcm.png" />
-        </div>
-        <div class="anh2">
-            <img width="120" src="feee.png" />
-        </div>
-        <div class="sinhvien">
-            <table border="1" class="sv">
-                <tr>
-                    <td colspan="2" class="textsv">GVHD: THS. LÊ MINH THÀNH</td>
-                </tr>
-                <tr>
-                    <td class="textsv">
-                        CAO NGUYÊN LINH
-                    </td>
-                    <td class="textsv">15141196</td>
-                </tr>
-                <tr>
-                    <td class="textsv">
-                        TỪ ĐỨC LỢI
-                    </td>
-                    <td class="textsv">16141196</td>
-                </tr>
-            </table>
-        </div>
-        <div class="main">
-            <div class="button-box1">
-                <div id="btn1"></div>
-                <button id="btn11" type="button" class="toggle-btn11" onclick="intext1()">TỰ ĐỘNG</button>
-                <button id="btn12" type="button" class="toggle-btn11" onclick="intext2()">BẰNG TAY</button>
-            </div>
-        </div>
-
-                <div class="CT">
-                    <div class="control">
-                        <img src="nd.png">
-                        <div id="nhietdo" class="texttb">NHIỆT ĐỘ</div>
-                    </div>
-                    <div class="control">
-                        <img src="dad.png" >
-                        <div id="dodamdat" class="texttb">ĐỘ ẨM ĐẤT</div>
-                    </div>
-                    <div class="control">
-                        <img src="da.png" >
-                        <div id="doam" class="texttb">ĐỘ ẨM</div>
-                    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <nav
+          id="sidebarMenu"
+          class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+        >
+          <div class="sidebar-sticky pt-3">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">
+                  <span data-feather="home">
+                    <i class="fas fa-home"></i>
+                  </span>
+                  Trang chủ <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="tempature.html">
+                  <span data-feather="tempature">
+                    <i class="fas fa-temperature-high"></i>
+                  </span>
+                  Nhiệt độ
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="soilMoisture.html">
+                  <span data-feather="moisture">
+                    <i class="fas fa-seedling"></i
+                  ></span>
+                  Độ ẩm đất
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="humidity.html">
+                  <span data-feather="hudiminity">
+                    <i class="fas fa-tint"></i>
+                  </span>
+                  Độ ẩm
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+          <h2>Trang chủ</h2>
+          <div class="full-height d-flex align-items-center">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-10">
+                <div class="card-deck">
+                  <div
+                    class="card shadow-lg p-5 mb-5 text-white mb-3 rounded"
+                    style="
+                      background: linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 0%,
+                        rgba(198, 67, 67, 1) 69%
+                      );
+                    "
+                  >
+                    <a
+                      href="tempature.html"
+                      style="text-decoration: none; color: white"
+                    >
+                      <img
+                        src="../asset/images/thermometer-temperature-svgrepo-com.svg"
+                        class="card-img-top"
+                        alt="Tempature"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title text-center h2">Nhiệt độ</h5>
+                      </div>
+                    </a>
+                  </div>
+                  <div
+                    class="card shadow-lg p-5 mb-5 bg-white rounded rounded text-white"
+                    style="
+                      background: linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 0%,
+                        rgba(110, 81, 81, 1) 69%
+                      );
+                    "
+                  >
+                    <a
+                      href="tempature.html"
+                      style="text-decoration: none; color: white"
+                    >
+                      <img
+                        src="../asset/images/soil-moisture-svgrepo-com.svg"
+                        class="card-img-top"
+                        alt="Moisture"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title h2 text-center">Độ ẩm đất</h5>
+                      </div>
+                    </a>
+                  </div>
+                  <div
+                    class="card shadow-lg p-5 mb-5 text-white rounded rounded"
+                    style="
+                      background: linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 19%,
+                        rgba(81, 185, 224, 1) 90%
+                      );
+                    "
+                  >
+                    <a
+                      href="tempature.html"
+                      style="text-decoration: none; color: white"
+                    >
+                      <img
+                        src="../asset/images/humidity_1.svg"
+                        class="card-img-top"
+                        alt="Tempature"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title h2 text-center">Độ ẩm</h5>
+                      </div>
+                    </a>
+                  </div>
                 </div>
-
-
-        <div class="form-box">
-            TRẠNG THÁI ĐÈN
-            <div class="button-box">
-                <div id="btn2"></div>
-                <button id="btn21" type="button" class="toggle-btn2" onclick="leftclick2()">ON</button>
-                <button id="btn22" type="button" class="toggle-btn2" onclick="rightclick2()">OFF</button>
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-2">
+                <p class="h5">Cơ chế hoạt động</p>
+                <div class="d-flex">
+                  <div class="mr-2 font-weight-bold">Tự động</div>
+                  <div class="font-weight-bold">Bằng tay</div>
+                </div>
+                <label class="switch">
+                  <input type="checkbox" />
+                  <span class="slider"></span>
+                </label>
+                <div>
+                  <div class="h6">Trạng thái đèn</div>
+                  <div class="">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
+                  <div>
+                    <div class="h6">Trạng thái quạt</div>
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
+                  <div>
+                    <div class="h6">Trạng thái máy bơm</div>
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
+                  <div>
+                    <div class="h6">Trạng thái phun sương</div>
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-        <div class="quat">
-            TRẠNG THÁI QUẠT
-            <div class="button-box">
-                <div id="btn3"></div>
-                <button id="btn31" type="button" class="toggle-btn3" onclick="leftclick3()">ON</button>
-                <button id="btn32" type="button" class="toggle-btn3" onclick="rightclick3()">OFF</button>
-            </div>
-        </div>
-        <div class="bom">
-            TRẠNG THÁI MÁY BƠM
-            <div class="button-box">
-                <div id="btn4"></div>
-                <button id="btn41" type="button" class="toggle-btn4" onclick="leftclick4()">ON</button>
-                <button id="btn42" type="button" class="toggle-btn4" onclick="rightclick4()">OFF</button>
-            </div>
-        </div>
-        <div class="phunsuong">
-            TRẠNG THÁI PHUN SƯƠNG
-            <div class="button-box">
-                <div id="btn5"></div>
-                <button id="btn51" type="button" class="toggle-btn5" onclick="leftclick5()">ON</button>
-                <button id="btn52" type="button" class="toggle-btn5" onclick="rightclick5()">OFF</button>
-            </div>
-        </div>
+          </div>
+        </main>
+      </div>
     </div>
-    <script src="index.js"></script>
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-    
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-        apiKey: "AIzaSyA_fac89wpzdEv-m4A8iemVDEgwaB3qwhc",
-        authDomain: "iots-43546.firebaseapp.com",
-        databaseURL: "https://iots-43546-default-rtdb.asia-southeast1.firebasedatabase.app",
-        projectId: "iots-43546",
-        storageBucket: "iots-43546.appspot.com",
-        messagingSenderId: "448994359206",
-        appId: "1:448994359206:web:ca80fc8b42edb00fa08167",
-        measurementId: "G-3K8J69RXH7"
-    };
-    
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        import {getDatabase, ref, set, child, update, remove}
-        from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"
-        var chk = document.getElementById("chk");
-        var chkbtn = document.getElementById("truot")
-
-        // SOCIAL PANEL JS
-
-        const db = getDatabase();
-        var insBtn21 = document.getElementById("btn21");
-        var insBtn22 = document.getElementById("btn22");
-
-        var insBtn31 = document.getElementById("btn31");
-        var insBtn32 = document.getElementById("btn32");
-
-        var insBtn41 = document.getElementById("btn41");
-        var insBtn42 = document.getElementById("btn42");
-
-        var insBtn51 = document.getElementById("btn51");
-        var insBtn52 = document.getElementById("btn52");
-
-        var tudongbtn = document.getElementById("btn11");
-        var bangtaybtn = document.getElementById("btn12");
-
-        function leftclick2(){
-            set(ref(db, "TRẠNG THÁI ĐÈN"),{
-                Status: 1
-            })
-        }
-        function rightclick2(){
-            set(ref(db, "TRẠNG THÁI ĐÈN"),{
-                Status: 0
-            })
-        }
-        function leftclick3(){
-            set(ref(db, "TRẠNG THÁI QUẠT"),{
-                Status: 1
-            })
-        }
-        function rightclick3(){
-            set(ref(db, "TRẠNG THÁI QUẠT"),{
-                Status: 0
-            })
-        }
-        function leftclick4(){
-            set(ref(db, "TRẠNG THÁI MÁY BƠM"),{
-                Status: 1
-            })
-        }
-        function rightclick4(){
-            set(ref(db, "TRẠNG THÁI MÁY BƠM"),{
-                Status: 0
-            })
-        }
-        function leftclick5(){
-            set(ref(db, "TRẠNG THÁI PHUN SƯƠNG"),{
-                Status: 1
-            })
-        }
-        function rightclick5(){
-            set(ref(db, "TRẠNG THÁI PHUN SƯƠNG"),{
-                Status: 0
-            })
-        }
-
-        function tudong(){
-            set(ref(db, "CHẾ ĐỘ HOẠT ĐỘNG"),{
-                Status: 0
-            })
-        }
-        function bangtay(){
-            set(ref(db, "CHẾ ĐỘ HOẠT ĐỘNG"),{
-                Status: 1
-            })
-        }
-        
-        insBtn21.addEventListener('click', leftclick2);
-        insBtn22.addEventListener('click', rightclick2);
-        insBtn31.addEventListener('click', leftclick3);
-        insBtn32.addEventListener('click', rightclick3);
-        insBtn41.addEventListener('click', leftclick4);
-        insBtn42.addEventListener('click', rightclick4);
-        insBtn51.addEventListener('click', leftclick5);
-        insBtn52.addEventListener('click', rightclick5);
-        tudongbtn.addEventListener('click', tudong);
-        bangtaybtn.addEventListener('click', bangtay);
-        
-    </script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
