--- a/views/index.html
+++ b/views/index.html
@@ -137,7 +137,7 @@
                     "
                   >
                     <a
-                      href="tempature.html"
+                      href="soilMoisture.html"
                       style="text-decoration: none; color: white"
                     >
                       <img
@@ -162,7 +162,7 @@
                     "
                   >
                     <a
-                      href="tempature.html"
+                      href="humidity.html"
                       style="text-decoration: none; color: white"
                     >
                       <img
@@ -172,8 +172,7 @@
                       />
                       <div class="card-body">
                         <h5 class="card-title h2 text-center">Độ ẩm</h5>
-                        <div class="value" id="humi">%H%
-                        </div>
+                        <div class="value" id="humi">%H%</div>
                       </div>
                     </a>
                   </div>
@@ -186,35 +185,55 @@
                   <div class="font-weight-bold">Bằng tay</div>
                 </div>
                 <label class="switch">
-                  <input type="checkbox" onchange="mode(this)" id="CHẾ ĐỘ HOẠT ĐỘNG" />
+                  <input
+                    type="checkbox"
+                    onchange="mode(this)"
+                    id="CHẾ ĐỘ HOẠT ĐỘNG"
+                  />
                   <span class="slider"></span>
                 </label>
                 <div>
                   <div class="h6">Trạng thái đèn</div>
                   <div class="">
                     <label class="switch">
-                      <input type="checkbox" onchange="toggleCheckbox(this)" id="TRẠNG THÁI ĐÈN"/>
+                      <input
+                        type="checkbox"
+                        onchange="toggleCheckbox(this)"
+                        id="TRẠNG THÁI ĐÈN"
+                      />
                       <span class="slider round"></span>
                     </label>
                   </div>
                   <div>
                     <div class="h6">Trạng thái quạt</div>
                     <label class="switch">
-                      <input type="checkbox" onchange="toggleCheckbox(this)" id="TRẠNG THÁI QUẠT" />
+                      <input
+                        type="checkbox"
+                        onchange="toggleCheckbox(this)"
+                        id="TRẠNG THÁI QUẠT"
+                      />
                       <span class="slider round"></span>
                     </label>
                   </div>
                   <div>
                     <div class="h6">Trạng thái máy bơm</div>
                     <label class="switch">
-                      <input type="checkbox" onchange="toggleCheckbox(this)" id="TRẠNG THÁI MÁY BƠM"/>
+                      <input
+                        type="checkbox"
+                        onchange="toggleCheckbox(this)"
+                        id="TRẠNG THÁI MÁY BƠM"
+                      />
                       <span class="slider round"></span>
                     </label>
                   </div>
                   <div>
                     <div class="h6">Trạng thái phun sương</div>
                     <label class="switch">
-                      <input type="checkbox" onchange="toggleCheckbox(this)" id="TRẠNG THÁI PHUN SƯƠNG"/>
+                      <input
+                        type="checkbox"
+                        onchange="toggleCheckbox(this)"
+                        id="TRẠNG THÁI PHUN SƯƠNG"
+                      />
                       <span class="slider round"></span>
                     </label>
                   </div>
@@ -243,58 +262,51 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-  
-    <script>
 
-    const config = {
-    apiKey: "AIzaSyA_fac89wpzdEv-m4A8iemVDEgwaB3qwhc",
-    authDomain: "iots-43546.firebaseapp.com",
-    databaseURL: "https://iots-43546-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "iots-43546",
-    storageBucket: "iots-43546.appspot.com",
-    messagingSenderId: "448994359206",
-    appId: "1:448994359206:web:ca80fc8b42edb00fa08167",
-    measurementId: "G-3K8J69RXH7"
+    <script>
+      const config = {
+        apiKey: "AIzaSyA_fac89wpzdEv-m4A8iemVDEgwaB3qwhc",
+        authDomain: "iots-43546.firebaseapp.com",
+        databaseURL:
+          "https://iots-43546-default-rtdb.asia-southeast1.firebasedatabase.app",
+        projectId: "iots-43546",
+        storageBucket: "iots-43546.appspot.com",
+        messagingSenderId: "448994359206",
+        appId: "1:448994359206:web:ca80fc8b42edb00fa08167",
+        measurementId: "G-3K8J69RXH7",
       };
       // Initialize Firebase
       firebase.initializeApp(config);
       // firebase.analytics();
       var solid = document.getElementById("solid");
-      var dbSolid = firebase
-        .database()
-        .ref()
-        .child("DỮ LIỆU/ĐỘ ẨM ĐẤT");
+      var dbSolid = firebase.database().ref().child("DỮ LIỆU/ĐỘ ẨM ĐẤT");
       var huminity = document.getElementById("humi");
-      var dbHumi = firebase
-        .database()
-        .ref()
-        .child("DỮ LIỆU/NHIỆT ĐỘ");
+      var dbHumi = firebase.database().ref().child("DỮ LIỆU/NHIỆT ĐỘ");
       var temparute = document.getElementById("temp");
-      var dbTemp = firebase
-        .database()
-        .ref()
-        .child("DỮ LIỆU/ĐỘ ẨM");
-      dbSolid.on("value", (snap) => (solid.innerText = snap.val() +" %"));
-      dbHumi.on("value", (snap) => (huminity.innerText = snap.val() +" %"));
-      dbTemp.on("value", (snap) => (temparute.innerText = snap.val() +" °C"));
+      var dbTemp = firebase.database().ref().child("DỮ LIỆU/ĐỘ ẨM");
+      dbSolid.on("value", (snap) => (solid.innerText = snap.val() + " %"));
+      dbHumi.on("value", (snap) => (huminity.innerText = snap.val() + " %"));
+      dbTemp.on("value", (snap) => (temparute.innerText = snap.val() + " °C"));
       // end
       function toggleCheckbox(element) {
-       var state;
+        var state;
         if (element.checked) {
-          firebase.database().ref(element.id.toString()).set({Status: 'On'});
-        }
-         else 
-         firebase.database().ref(element.id.toString()).set({Status: 'Off'});
-         
+          firebase.database().ref(element.id.toString()).set({ Status: "On" });
+        } else
+          firebase.database().ref(element.id.toString()).set({ Status: "Off" });
       }
       function mode(element) {
-       var state;
+        var state;
         if (element.checked) {
-          firebase.database().ref(element.id.toString()).set({Status: 'Manual'});
-        }
-         else 
-         firebase.database().ref(element.id.toString()).set({Status: 'Auto'});
-         
+          firebase
+            .database()
+            .ref(element.id.toString())
+            .set({ Status: "Manual" });
+        } else
+          firebase
+            .database()
+            .ref(element.id.toString())
+            .set({ Status: "Auto" });
       }
     </script>
   </body>
