--- a/views/index.html
+++ b/views/index.html
@@ -95,25 +95,51 @@
             </ul>
           </div>
         </nav>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-          <h2>Trang chủ</h2>
-          <div class="full-height d-flex align-items-center">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
+          <div>
             <div class="row">
+              <div class="col-lg-2 col-12 text-center">
+                <img
+                  src="../asset//images//Logo-DH-Su-Pham-Ky-Thuat-TP-Ho-Chi-Minh-HCMUTE.png"
+                  alt="Logo HCMUTE"
+                  width="90px"
+                  height="auto"
+                />
+              </div>
+              <div class="col-lg-8 col-12">
+                <div class="text-center">
+                  <div class="h3">ĐỒ ÁN TỐT NGHIỆP</div>
+                  <div class="h5">
+                    ĐỀ TÀI: "THIẾT KẾ HỆ THỐNG GIÁM SÁT NÔNG NGHIỆP DÙNG CÔNG
+                    NGHỆ IOT THÔNG QUA MẠNG ZIGBEE"
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-12 text-center">
+                <img
+                  src="../asset/images/feee.png"
+                  alt="FEEE"
+                  width="130px"
+                  height="auto"
+                />
+              </div>
+            </div>
+            <div class="row my-2">
               <div class="col-sm-12 col-md-12 col-lg-10">
-                <div class="card-deck">
-                  <div
-                    class="card shadow-lg p-5 mb-5 text-white mb-3 rounded"
-                    style="
-                      background: linear-gradient(
-                        90deg,
-                        rgba(2, 0, 36, 1) 0%,
-                        rgba(198, 67, 67, 1) 69%
-                      );
-                    "
-                  >
+                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+                  <div class="col mb-4">
                     <a
+                      class="card shadow-lg p-5 mb-5 text-white mb-3 rounded"
+                      style="
+                        background: linear-gradient(
+                          90deg,
+                          rgba(2, 0, 36, 1) 0%,
+                          rgba(198, 67, 67, 1) 69%
+                        );
+                        text-decoration: none;
+                        color: white;
+                      "
                       href="tempature.html"
-                      style="text-decoration: none; color: white"
                     >
                       <img
                         src="../asset/images/thermometer-temperature-svgrepo-com.svg"
@@ -121,24 +147,24 @@
                         alt="Tempature"
                       />
                       <div class="card-body">
-                        <h5 class="card-title text-center h2">Nhiệt độ</h5>
-                        <div class="value" id="temp">%B%</div>
+                        <h5 class="card-title text-center h5 my-4">Nhiệt độ</h5>
+                        <div class="value text-center" id="temp">%B%</div>
                       </div>
                     </a>
                   </div>
-                  <div
-                    class="card shadow-lg p-5 mb-5 bg-white rounded rounded text-white"
-                    style="
-                      background: linear-gradient(
-                        90deg,
-                        rgba(2, 0, 36, 1) 0%,
-                        rgba(110, 81, 81, 1) 69%
-                      );
-                    "
-                  >
+                  <div class="col mb-4">
                     <a
+                      class="card shadow-lg p-5 mb-5 bg-white rounded rounded text-white"
+                      style="
+                        background: linear-gradient(
+                          90deg,
+                          rgba(2, 0, 36, 1) 0%,
+                          rgba(110, 81, 81, 1) 69%
+                        );
+                        text-decoration: none;
+                        color: white;
+                      "
                       href="soilMoisture.html"
-                      style="text-decoration: none; color: white"
                     >
                       <img
                         src="../asset/images/soil-moisture-svgrepo-com.svg"
@@ -146,24 +172,26 @@
                         alt="Moisture"
                       />
                       <div class="card-body">
-                        <h5 class="card-title h2 text-center">Độ ẩm đất</h5>
-                        <div class="value" id="solid">%H%</div>
+                        <h5 class="card-title h5 my-4 text-center">
+                          Độ ẩm đất
+                        </h5>
+                        <div class="value text-center" id="solid">%H%</div>
                       </div>
                     </a>
                   </div>
-                  <div
-                    class="card shadow-lg p-5 mb-5 text-white rounded rounded"
-                    style="
-                      background: linear-gradient(
-                        90deg,
-                        rgba(2, 0, 36, 1) 19%,
-                        rgba(81, 185, 224, 1) 90%
-                      );
-                    "
-                  >
+                  <div class="col mb-4">
                     <a
+                      class="card shadow-lg p-5 mb-5 text-white rounded rounded"
+                      style="
+                        background: linear-gradient(
+                          90deg,
+                          rgba(2, 0, 36, 1) 19%,
+                          rgba(81, 185, 224, 1) 90%
+                        );
+                        text-decoration: none;
+                        color: white;
+                      "
                       href="humidity.html"
-                      style="text-decoration: none; color: white"
                     >
                       <img
                         src="../asset/images/humidity_1.svg"
@@ -171,8 +199,8 @@
                         alt="Tempature"
                       />
                       <div class="card-body">
-                        <h5 class="card-title h2 text-center">Độ ẩm</h5>
-                        <div class="value" id="humi">%H%</div>
+                        <h5 class="card-title h5 my-4 text-center">Độ ẩm</h5>
+                        <div class="value text-center" id="humi">%H%</div>
                       </div>
                     </a>
                   </div>
@@ -245,13 +273,17 @@
       </div>
     </div>
     <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+    <script type="module" src="../utils/index.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
     <script
@@ -259,55 +291,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-
-    <script>
-      const config = {
-        apiKey: "AIzaSyA_fac89wpzdEv-m4A8iemVDEgwaB3qwhc",
-        authDomain: "iots-43546.firebaseapp.com",
-        databaseURL:
-          "https://iots-43546-default-rtdb.asia-southeast1.firebasedatabase.app",
-        projectId: "iots-43546",
-        storageBucket: "iots-43546.appspot.com",
-        messagingSenderId: "448994359206",
-        appId: "1:448994359206:web:ca80fc8b42edb00fa08167",
-        measurementId: "G-3K8J69RXH7",
-      };
-      // Initialize Firebase
-      firebase.initializeApp(config);
-      // firebase.analytics();
-      var solid = document.getElementById("solid");
-      var dbSolid = firebase.database().ref().child("DỮ LIỆU/ĐỘ ẨM ĐẤT");
-      var huminity = document.getElementById("humi");
-      var dbHumi = firebase.database().ref().child("DỮ LIỆU/NHIỆT ĐỘ");
-      var temparute = document.getElementById("temp");
-      var dbTemp = firebase.database().ref().child("DỮ LIỆU/ĐỘ ẨM");
-      dbSolid.on("value", (snap) => (solid.innerText = snap.val() + " %"));
-      dbHumi.on("value", (snap) => (huminity.innerText = snap.val() + " %"));
-      dbTemp.on("value", (snap) => (temparute.innerText = snap.val() + " °C"));
-      // end
-      function toggleCheckbox(element) {
-        var state;
-        if (element.checked) {
-          firebase.database().ref(element.id.toString()).set({ Status: "On" });
-        } else
-          firebase.database().ref(element.id.toString()).set({ Status: "Off" });
-      }
-      function mode(element) {
-        var state;
-        if (element.checked) {
-          firebase
-            .database()
-            .ref(element.id.toString())
-            .set({ Status: "Manual" });
-        } else
-          firebase
-            .database()
-            .ref(element.id.toString())
-            .set({ Status: "Auto" });
-      }
-    </script>
   </body>
 </html>
