--- a/views/soilMoisture.html
+++ b/views/soilMoisture.html
@@ -31,7 +31,7 @@
     >
       <div class="container">
         <div class="text-left my-3">
-          <a href="index.html" class="text-white">Quay trở lại</a>
+          <a href="../index.html" class="text-white">Quay trở lại</a>
         </div>
         <p id="chart-solid"></p>
         <div class="text-center text-white">
