--- a/views/humidity.html
+++ b/views/humidity.html
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <div class="text-left my-3">
-          <a href="index.html" class="text-white">Quay trở lại</a>
+          <a href="../index.html" class="text-white">Quay trở lại</a>
         </div>
         <p id="chart-humidity" class="bg-primary"></p>
         <div class="text-center text-white">
