--- a/views/tempature.html
+++ b/views/tempature.html
@@ -43,6 +43,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
-    <script src="../services/chartTempature.js"></script>
+    <script type="module" src="../services/chartTempature.js"></script>
   </body>
 </html>
