--- a/css/component.css
+++ b/css/component.css
@@ -1,3 +1,68 @@
+/* Cơ chế hoạt động */
+
+.switchType {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switchType input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.sliderType {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(202, 51, 51, 0.637);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.sliderType:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .sliderType {
+  background-color: rgb(48, 182, 48);
+}
+
+input:focus + .sliderType {
+  box-shadow: 0 0 1px rgb(48, 182, 48);
+}
+
+input:checked + .sliderType:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.sliderType.round {
+  border-radius: 34px;
+}
+
+.sliderType.round:before {
+  border-radius: 50%;
+}
+
+/* 4 nút còn lại*/
 .switch {
   position: relative;
   display: inline-block;
