--- a/views/humidity.html
+++ b/views/humidity.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <link rel="stylesheet" href="../css/chart.css">
     <title>Humidity Chart</title>
   </head>
   <body>
@@ -32,8 +33,8 @@
           <a href="../index.html" class="text-white">Quay trở lại</a>
         </div>
         <p id="chart-humidity" class="bg-primary"></p>
-        <div class="text-center text-white">
-          Current
+        <div class="text-center text-white h3">
+          Current:
           <span id="humi"></span>
         </div>
       </div>
