--- a/views/soilMoisture.html
+++ b/views/soilMoisture.html
@@ -16,6 +16,8 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/chart.css" />
+
     <title>Solid Moisture Chart</title>
   </head>
   <body>
@@ -34,7 +36,7 @@
           <a href="../index.html" class="text-white">Quay trở lại</a>
         </div>
         <p id="chart-solid"></p>
-        <div class="text-center text-white">
+        <div class="text-center text-white h3">
           Current:
           <span id="solid"></span>
         </div>
